navbar added, changed name to requests.try, added media queries for correct alignment

--- a/assets/css/Page-3.css
+++ b/assets/css/Page-3.css
@@ -1,6 +1,5 @@
-.u-section-1 {
-  background-image: linear-gradient(white, #85b9ee);
-}
+
+ 
 
 .u-section-1 .u-sheet-1 {
   min-height: 1908px;
@@ -46,6 +45,16 @@
   margin: 0 auto 0 0;
 }
 
+.u-image-1 {
+  width: 30px;
+  height: 308px;
+  background-image: url("images/5.jpg");
+  background-position: 10% 10%;
+  margin: 0 auto 0 0;
+}
+
+
+
 .u-section-1 .u-text-4 {
   text-transform: uppercase;
   font-size: 2rem;
@@ -64,29 +73,6 @@
   margin: 20px 0 0 347px;
 }
 
-.u-section-1 .u-btn-1 {
-  background-image: linear-gradient(to right, #569de6, #1fba95);
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 0.9375rem;
-  letter-spacing: 1px;
-  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: 20px 347px 0;
-  padding: 8px 36px 9px 35px;
-}
-
-.u-section-1 .u-btn-2 {
-  background-image: linear-gradient(to right, #569de6, #1fba95);
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 0.9375rem;
-  letter-spacing: 1px;
-  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: -39px 81px 0 auto;
-  padding: 8px 36px 9px 35px;
-}
 
 .u-section-1 .u-container-layout-2 {
   padding: 30px;
@@ -108,6 +94,12 @@
   margin: -276px 0 0 347px;
 }
 
+.u-texts{
+	font-weight: 700;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+}
+
 .u-section-1 .u-text-8 {
   font-weight: 700;
   font-size: 1.125rem;
@@ -119,29 +111,6 @@
   margin: 20px 0 0 347px;
 }
 
-.u-section-1 .u-btn-3 {
-  background-image: linear-gradient(to right, #569de6, #1fba95);
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 0.9375rem;
-  letter-spacing: 1px;
-  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: 20px 347px 0;
-  padding: 8px 36px 9px 35px;
-}
-
-.u-section-1 .u-btn-4 {
-  background-image: linear-gradient(to right, #569de6, #1fba95);
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 0.9375rem;
-  letter-spacing: 1px;
-  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: -39px 81px 0 auto;
-  padding: 8px 36px 9px 35px;
-}
 
 .u-section-1 .u-container-layout-3 {
   padding: 30px;
@@ -154,6 +123,8 @@
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
+
+
 
 .u-section-1 .u-text-10 {
   text-transform: uppercase;
@@ -171,6 +142,8 @@
 .u-section-1 .u-text-12 {
   margin: 20px 0 0 347px;
 }
+
+
 
 .u-section-1 .u-btn-5 {
   background-image: linear-gradient(to right, #569de6, #1fba95);
@@ -327,7 +300,7 @@
     padding-right: 10px;
   }
 
-  .u-section-1 .u-image-1 {
+  .u-section-1  {
     width: 235px;
     height: 235px;
   }
@@ -351,84 +324,21 @@
     padding-right: 10px;
   }
 
-  .u-section-1 .u-image-2 {
-    width: 235px;
-    height: 235px;
-  }
-
-  .u-section-1 .u-text-7 {
-    font-size: 2.25rem;
-    margin-top: -203px;
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-text-8 {
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-text-9 {
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-right: 185px;
-  }
+ 
 
   .u-section-1 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-1 .u-image-3 {
-    width: 235px;
-    height: 235px;
-  }
-
-  .u-section-1 .u-text-10 {
-    font-size: 2.25rem;
-    margin-top: -203px;
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-text-11 {
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-text-12 {
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-right: 185px;
-  }
+ 
 
   .u-section-1 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-1 .u-image-4 {
-    width: 235px;
-    height: 235px;
-  }
-
-  .u-section-1 .u-text-13 {
-    font-size: 2.25rem;
-    margin-top: -203px;
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-text-14 {
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-text-15 {
-    margin-left: 258px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-right: 185px;
-  }
+  
 }
 
 @media (max-width: 575px) {
@@ -436,49 +346,18 @@
     min-height: 569px;
   }
 
+  .u-section-1 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+.u-clearfix, .u-sheet, .u-sheet-1{
+	margin-left: 3rem;
+}
  
 
   .u-title{
     size: 4rem;
   }
 
-  .u-section-1 .u-text-11 {
-    margin-top: 22px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-12 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-left: 0;
-    margin-right: 252px;
-  }
-
-  .u-section-1 .u-image-4 {
-    margin-top: 125px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-text-13 {
-    font-size: 1.5rem;
-    margin-top: 30px;
-    margin-left: -5px;
-    margin-right: -5px;
-  }
-
-  .u-section-1 .u-text-14 {
-    margin-top: 22px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-15 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-left: 0;
-    margin-right: 252px;
-  }
+  
 }
